--- a/client/styles/Final.module.css
+++ b/client/styles/Final.module.css
@@ -33,7 +33,7 @@
   height: 3em;
 }
 
-p {
+.totalPoints {
   align-self: center;
   padding-bottom: 3em;
   font-family: 'Share Tech Mono', monospace;
